[package]
name             = "cosmwasm_otc-pkg"

version          = { workspace = true }
authors          = { workspace = true }
edition          = { workspace = true }

[dependencies]
cosmwasm-schema  = { workspace = true }
cosmwasm-std     = { workspace = true }
cw-storage-plus  = { workspace = true }
schemars         = { workspace = true }
serde            = { workspace = true }
