[package]
name               = "otcer-scripts"

version            = { workspace = true }
authors            = { workspace = true }
edition            = { workspace = true }

[dependencies]
cosmwasm-schema    = { workspace = true }
cosmwasm-std       = { workspace = true }
cw721              = { workspace = true }
rhaki-cw-plus      = { workspace = true }
cosmos-grpc-client = "0.2.4"
tokio              = { version = "1", features = ["full"] }

