[package]
name             = "otc-tests"

version          = { workspace = true }
authors          = { workspace = true }
edition          = { workspace = true }

[dependencies]
cosmwasm-schema  = { workspace = true }
cosmwasm-std     = { workspace = true }
cw20             = { workspace = true }
cw721            = { workspace = true }
rhaki-cw-plus    = { workspace = true }
cw-multi-test    = { workspace = true }