[package]
name                  = "otcer-tests"

version               = { workspace = true }
authors               = { workspace = true }
edition               = { workspace = true }

[dependencies]
anyhow                = "1.0.75"
cosmwasm-schema       = { workspace = true }
cosmwasm-std          = { workspace = true }
cw-multi-test         = { workspace = true }
cw20                  = { workspace = true }
cw20-base             = "1.1.1"
cw721                 = { workspace = true }
cw721-base            = {version = "0.18.0", features = ["library"]}
schemars              = { workspace = true }
serde                 = { version = "1.0.145", default-features = false, features = ["derive"] }
rhaki-cw-plus         = { workspace = true }
variable-provider     = "0.2.2"

otcer-pkg             = { workspace = true }
otcer-core            = { workspace = true }
otcer-register        = { workspace = true }
otcer-vesting-account = { workspace = true }
